--- a/src/app.pcss
+++ b/src/app.pcss
@@ -72,7 +72,11 @@
   * {
     @apply border-border;
   }
+  html,
   body {
-    @apply bg-background text-foreground;
+    @apply h-full
+  }
+  body {
+    @apply grid place-items-center bg-background text-foreground;
   }
 }
