refactor: Added unique ids for elements in the card component to improve transition animations.

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -3,6 +3,13 @@
 @tailwind utilities;
 
 @layer base {
+::view-transition-group(the-card),
+::view-transition-group(the-img),
+::view-transition-group(the-title),
+::view-transition-group(the-price) {
+  @apply z-30;
+}
+
   :root {
     --background: 240 10% 97%;
     --foreground: 240 10% 3.9%;
