style: Added missing semicolon and updated class in `html` and `body`.

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -73,11 +73,11 @@
     @apply border-border;
   }
   html{
-    @apply overflow-y-scroll
+    @apply overflow-y-scroll;
   }
   html,
   body {
-    @apply h-full
+    @apply h-full break-words;
   }
   body {
     @apply grid place-items-center bg-background text-foreground;
